--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       font-size: 1.5em;
       padding: 16px;
       box-sizing: border-box;
+      line-height: 1.5em;
     }
     button {
       float: right;
